--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Little Lemon Restaurant</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+    </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap");
     </style>
   </head>
   <body>
